@@ -17,114 +17,6 @@
 # the Free Software Foundation, 59 Temple Place - Suite 330, Boston,
 # MA 02111-1307, USA.
 # 
-# tk_dialog:
-#
-# This procedure displays a dialog box, waits for a button in the dialog
-# to be invoked, then returns the index of the selected button.
-#
-# Arguments:
-# w -		Window to use for dialog top-level.
-# title -	Title to display in dialog's decorative frame.
-# text -	Message to display in dialog.
-# bitmap -	Bitmap to display in dialog (empty string means none).
-# default -	Index of button that is to display the default ring
-#		(-1 means none).
-# args -	One or more strings to display in buttons across the
-#		bottom of the dialog box.
-
-proc tk_dialog {w title text bitmap default args} {
-    global tkPriv tkeWinNumber
-
-    if {[sn_batch_mode]} {
-        if {${title} != ""} {
-            set msg "${title}: ${text}"
-        } else {
-            set msg ${text}
-        }
-        puts stderr "WARNING: ${msg} <[lindex ${args} 0]>"
-        return 0
-    }
-
-    # 1. Create the top-level window and divide it into top
-    # and bottom parts.
-    if {${w} == "auto"} {
-        incr tkeWinNumber
-        set w ".info-${tkeWinNumber}"
-    }
-
-    if {[catch {sourcenav::Window ${w}}]} {
-        return -1
-    }
-    ${w} withdraw
-    ${w} on_close "set tkPriv(${w},button) -1"
-    ${w} configure -title ${title}
-
-    set focus [focus]
-    if {${focus} == ""} {
-        set focus "."
-    } else {
-        set focus [winfo toplevel ${focus}]
-    }
-    if {[wm state ${focus}] == "normal"} {
-        ${w} transient ${focus}
-    }
-
-    frame ${w}.top -relief groove -bd 2
-    pack ${w}.top -side top -fill both
-
-    # 2. Fill the top part with bitmap and message.
-
-    label ${w}.msg -text ${text}
-
-    pack ${w}.msg -in ${w}.top -side right -expand 1 -fill both -padx 5m\
-      -pady 5m
-    if {${bitmap} != ""} {
-        label ${w}.bitmap -image ${bitmap}
-        pack ${w}.bitmap -in ${w}.top -side left -padx 5m -pady 5m
-    }
-
-    # 3. Create a row of buttons at the bottom of the dialog.
-
-    eval sn_motif_buttons ${w} bottom ${default} ${args}
-
-    set i 0
-    foreach but ${args} {
-        ${w}.button_${i} configure -command " set tkPriv(${w},button) ${i} "
-        if {${i} == ${default}} {
-            bind ${w} <Return> "
-				catch {${w}.button_${i} flash}
-				${w}.button_${i} invoke
-			"
-        }
-        incr i
-    }
-    set lastnum [expr ${i} - 1]
-
-    catch {${w} grab set}
-
-    catch {${w} resizable yes no}
-    catch {${w} grab set}
-
-    #update idletasks
-    set geom [split [lindex [split [${w} geometry] "+"] 0] "x"]
-    ${w} minsize [lindex ${geom} 0] [lindex ${geom} 1]
-
-    ${w} move_to_mouse
-    ${w} take_focus ${w}.button_0
-
-    vwait tkPriv(${w},button)
-
-    itcl::delete object ${w}
-
-    catch {focus ${focus}}
-
-    #don't return -1
-    if {$tkPriv(${w},button) == -1} {
-        return ${lastnum}
-    } else {
-        return $tkPriv(${w},button)
-    }
-}
 
 #
 # This procedure creates buttons in a frame.
